Fixing @media on safari in em bug

--- a/master/css/_vars.scss
+++ b/master/css/_vars.scss
@@ -1,5 +1,5 @@
-$mobile-size: 48em; // ~768px
-$content-limit: 1920px;
+$mobile-size: 768px;
+$content-limit: 1440px;
 
 $primay-color: #bbb;
 $footer-color: #808080;
